[package]
name = "hotel"
version = "1.0.4"
edition = "2021"
authors = ["Nils Martel"]
categories = ["data-structures", "caching"]
description = "Collection Data-structure to associate values with keys"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
